@@ -1,3 +1,9 @@
+2009-10-14  Raphael 'kena' Poss  <r.c.poss@uva.nl>
+
+	Extend the unit test suite.
+	
+	* 1_slr/multiargs.c: Exercise multiple uses of `sl_decl'.
+
 2009-10-10  Raphael 'kena' Poss  <r.c.poss@uva.nl>
 
 	Extend the unit test suite.
